--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,19 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo_watchurs_wrapped.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=fallback"
+      href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=fallback"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Monoton&display=fallback"
+      href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=fallback"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gorditas:wght@700&display=fallback"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=fallback"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
