--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=fallback"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=fallback"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#121D36" />
     <meta name="description" content="와쳐스 프로젝트 : WATCHURS TFT" />
